Correct afair naming. Add styles to be more readable.

--- a/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,6 +1,6 @@
 .span {
     display: inline-block;
     cursor: pointer;
-    height: 40px;
-    padding-top: 10px;
+    /*height: 40px;*/
+    padding: 10px 0;
 }
